--- a/client/src/components/AddTopic/style.css
+++ b/client/src/components/AddTopic/style.css
@@ -4,6 +4,7 @@
   width: var(--container-width);
   height: var(--container-height);
   font-size: 1.2em;
+  position: relative;
 }
 
 .add-topic form {
@@ -22,10 +23,13 @@
   border-radius: 10px;
   padding: 0.5rem;
   border: 1px solid black;
+  width: 100%;
 }
 
-.topic-name {
-  padding: 0 1rem;
+.add-topic .topic-name {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin: 1rem 0;
 }
 
 .topic-name input {
@@ -38,8 +42,33 @@
 
 .block-item:hover {
   border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.5rem;
+  background-color: #f5f5f5;
+  transition-property: padding, background-color, border;
+  transition-duration: 0.05s;
+  transition-timing-function: linear;
 }
 
 .block-item:active {
   border: 1px solid red;
+}
+
+.edit-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  border: 1px solid black;
+  padding: 0.5rem;
+}
+
+.edit-button:hover {
+  background-color: #a7a4a4;
+  transition: background-color 0.05s linear;
+}
+
+.topic-data {
+  margin-bottom: 2rem;
+  width: 100%;
 }
